# tv-power

./: .gitmodules  Cargo.toml  README.md  build.rs  deny.toml  rust-toolchain.toml  tv-power.service
.github/workflows/: ci.yml
src/: adb.rs  cli.rs  config.rs  main.rs  outputs.rs  power.rs  presence.rs
