[package]
name = "tv-power"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
color-eyre = "0.6.2"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
dbus = "0.9.7"
mac_address = "1.1.4"
wol-rs = "1.0.0"

[build-dependencies]
dbus-codegen = { version = "0.10.0", default-features = false }
