[package]
name = "tv-power"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
color-eyre = "0.6.2"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
dbus = "0.9.7"
dotenvy = "0.15.6"
env_logger = "0.10.0"
libsystemd = "0.6.0"
log = "0.4.17"
mac_address = "1.1.4"
nix = { version = "0.26.2", default-features = false, features = ["signal"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
systemd-journal-logger = "0.7.0"
wol-rs = "1.0.0"

[build-dependencies]
dbus-codegen = { version = "0.10.0", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
